Update to prepublishOnly script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "rollup -c",
     "pretest": "npm run build && rollup -c rollup.config.test.js",
     "test": "karma start test/karma.config.cjs",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "auto-complete",
